# advent_of_code

./: .gitignore  fetch_problem.py  pyproject.toml
day1/part1/: main.py
day1/part2/: main.py
day2/: pt1.py  pt2.py
day3/: pt1.py
day4/: pt1.py
day5/: pt2.py
solutions/2024/3/: pt2.py
solutions/2024/4/: pt1.py  pt2.py
solutions/2024/5/: pt1.py
solutions/2024/6/: part1.md  part1.py  part2.md  part2.py
solutions/2024/7/: 7.md  7.py
solutions/2024/8/: part1.md  part1.py  part2.md  part2.py
